finished mail page and feedback

--- a/public/forJobs.html
+++ b/public/forJobs.html
@@ -1,17 +1,36 @@
-<script
-src="https://hr-skyen.dk/hr/frame-api/hr.js"
-type="text/javascript"
-></script>
-<div className={classes.Content}>
-<div id="hrskyen">
-  <noscript>
-    This page requires javascript
-    <br />
-    <a href="https://hr-skyen.dk/list-jobs/">Visit our job page</a>
-  </noscript>
+<head>
+  <link rel="stylesheet" href="styles.css">
+</head>
+<div class="Container">
+  <header class="Toolbar">
+    <div class="DrawerToggle_DrawerToggle__3HqL_">
+      <div></div>
+      <div></div>
+      <div></div>
+    </div>
+    <nav class="DesktopOnly">
+      <ul class="NavigationItems">
+        <div class="Logo"><img src="/images/NYlogo250px.png" alt="Go:Work ApS" /></div>
+        <li class="NavigationItem" id="listItem"><a href="/vikar">Jobsøgende</a></li>
+        <li class="NavigationItem" id="listItem"><a href="/virksomheder">Virksomheder</a></li>
+        <li class="NavigationItem" id="listItem"><a href="/uddannelser">Uddannelsessteder</a></li>
+        <li class="NavigationItem" id="listItem"><a href="/om-os">Om&nbsp;os</a></li>
+        <div class="KontaktNav">
+          <li class="NavigationItem" id="listItem"><a href="/kontakt">Kontakt&nbsp;os</a></li>
+        </div>
+      </ul>
+    </nav>
+    <div></div>
+  </header>
 </div>
+<div class="Content">
+  <script src="https://hr-skyen.dk/hr/frame-api/hr.js" type="text/javascript"></script>
+  <div id="hrskyen">
+    <noscript>
+      This page requires javascript
+      <br />
+      <a href="https://hr-skyen.dk/list-jobs/">Visit our job page</a>
+    </noscript>
+  </div>
+  <script src="https://hr-skyen.dk/hr/frame-api/customers/goworkaps.js" type="text/javascript"></script>
 </div>
-<script
-src="https://hr-skyen.dk/hr/frame-api/customers/goworkaps.js"
-type="text/javascript"
-></script>
