updated virksomheder and 404 page

--- a/public/forJobs.html
+++ b/public/forJobs.html
@@ -10,7 +10,7 @@
     </div>
     <nav class="DesktopOnly">
       <ul class="NavigationItems">
-        <div class="Logo"><img src="/images/NYlogo250px.png" alt="Go:Work ApS" /></div>
+        <a href="/vikar" class="Logo"><img src="/images/NYlogo250px.png" alt="Go:Work ApS" /></a>
         <li class="NavigationItem" id="listItem"><a href="/vikar">Jobsøgende</a></li>
         <li class="NavigationItem" id="listItem"><a href="/virksomheder">Virksomheder</a></li>
         <li class="NavigationItem" id="listItem"><a href="/uddannelser">Uddannelsessteder</a></li>
