--- a/public/forJobs.html
+++ b/public/forJobs.html
@@ -1,36 +1,107 @@
-<head>
-  <link rel="stylesheet" href="styles.css">
-</head>
-<div class="Container">
-  <header class="Toolbar">
-    <div class="DrawerToggle_DrawerToggle__3HqL_">
-      <div></div>
-      <div></div>
-      <div></div>
-    </div>
-    <nav class="DesktopOnly">
-      <ul class="NavigationItems">
-        <a href="/vikar" class="Logo"><img src="/images/NYlogo250px.png" alt="Go:Work ApS" /></a>
-        <li class="NavigationItem" id="listItem"><a href="/vikar">Jobsøgende</a></li>
-        <li class="NavigationItem" id="listItem"><a href="/virksomheder">Virksomheder</a></li>
-        <li class="NavigationItem" id="listItem"><a href="/uddannelser">Uddannelsessteder</a></li>
-        <li class="NavigationItem" id="listItem"><a href="/om-os">Om&nbsp;os</a></li>
-        <div class="KontaktNav">
-          <li class="NavigationItem" id="listItem"><a href="/kontakt">Kontakt&nbsp;os</a></li>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Ledige stillinger</title>
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body>
+    <div style="width: 100vw">
+      <div class="Container">
+        <header class="Toolbar">
+          <div class="DrawerToggle_DrawerToggle__3HqL_">
+            <div></div>
+            <div></div>
+            <div></div>
+          </div>
+          <nav class="DesktopOnly">
+            <ul class="NavigationItems">
+              <a href="/vikar" class="Logo"
+                ><img src="/images/NYlogo250px.png" alt="Go:Work ApS"
+              /></a>
+              <li class="NavigationItem" id="listItem">
+                <a href="/vikar">Jobsøgende</a>
+              </li>
+              <li class="NavigationItem" id="listItem">
+                <a href="/virksomheder">Virksomheder</a>
+              </li>
+              <li class="NavigationItem" id="listItem">
+                <a href="/uddannelser">Uddannelsessteder</a>
+              </li>
+              <li class="NavigationItem" id="listItem">
+                <a href="/om-os">Om&nbsp;os</a>
+              </li>
+              <div class="KontaktNav">
+                <li class="NavigationItem" id="listItem">
+                  <a href="/kontakt">Kontakt&nbsp;os</a>
+                </li>
+              </div>
+            </ul>
+          </nav>
+          <div></div>
+        </header>
+      </div>
+      <div class="Content">
+        <script
+          src="https://hr-skyen.dk/hr/frame-api/hr.js"
+          type="text/javascript"
+        ></script>
+        <div id="hrskyen">
+          <noscript>
+            This page requires javascript
+            <br />
+            <a href="https://hr-skyen.dk/list-jobs/">Visit our job page</a>
+          </noscript>
         </div>
-      </ul>
-    </nav>
-    <div></div>
-  </header>
-</div>
-<div class="Content">
-  <script src="https://hr-skyen.dk/hr/frame-api/hr.js" type="text/javascript"></script>
-  <div id="hrskyen">
-    <noscript>
-      This page requires javascript
-      <br />
-      <a href="https://hr-skyen.dk/list-jobs/">Visit our job page</a>
-    </noscript>
-  </div>
-  <script src="https://hr-skyen.dk/hr/frame-api/customers/goworkaps.js" type="text/javascript"></script>
-</div>
+        <script
+          src="https://hr-skyen.dk/hr/frame-api/customers/goworkaps.js"
+          type="text/javascript"
+        ></script>
+      </div>
+      <div class="Footer">
+        <div>
+          <ul class="List">
+            <h3>GoWork</h3>
+            <li style="line-height: 1.5rem">
+              GoWork er et vikarbureau med 2 gazellepriser.<br />
+              Vi har siden 2012 formidlet ambitiøse mennesker <br />
+              i starten af deres karriere til midlertidige opgaver.
+            </li>
+            <li style="font-weight: bold">
+              Er din virksomhed klar til at Go Work?
+            </li>
+          </ul>
+        </div>
+        <div>
+          <ul class="List">
+            <h3>GoWork ApS</h3>
+            <li style="line-height: 1.5rem">
+              Fjordsgade 11, 1. sal <br />
+              5000 Odense C. <br />
+              Tlf.: 6610 6500 <br />
+            </li>
+            Følg os:
+            <div class="Icon">
+              <a
+                href="https://www.facebook.com/goworkodense/"
+                target="_blank"
+                rel="noreferrer"
+                ><img src="/images/facebook.svg" alt="facebook Icon"
+              /></a>
+            </div>
+            <div class="Icon">
+              <a
+                href="https://dk.linkedin.com/company/go-work-aps"
+                target="_blank"
+                rel="noreferrer"
+                ><img src="/images/linkedin.svg" alt="linkedIn Icon"
+              /></a>
+            </div>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </body>
+</html>
