updated meta data across application

--- a/public/forJobs.html
+++ b/public/forJobs.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ledige stillinger</title>
+    <meta name="description" content="Ledige SIDE" />
+    <link rel="icon" href="/logoIcon.png" />
     <link rel="stylesheet" href="styles.css" />
     <link rel="stylesheet" href="sideDrawer.css" />
   </head>
@@ -42,12 +44,11 @@
         </nav>
         <div class="Backdrop"></div>
       </header>
-      <!-- REMOVE DISPLAY NONE BEFORE STYLING START -->
-      <div class="SideDrawer" style="text-align: center">
+      <div class="SideDrawer Close" style="text-align: center">
         <nav>
           <ul class="NavigationItems">
             <a href="/vikar" class="MobileLogo"
-              ><img src="/images/NYlogo250px.png" alt="Go:Work ApS"
+              ><img src="/images/NYlogo250px.png" alt="GoWork ApS"
             /></a>
             <li class="NavigationItem" id="listItem">
               <a href="/vikar">Jobsøgende</a>
@@ -69,11 +70,11 @@
           </ul>
         </nav>
         <div class="MobileFooter">
-            <h4 style="margin-left:3px">Følg os:</h4>
-            <FacebookIcon link ='https://www.facebook.com/goworkodense/' />
-            <LinkedInIcon link = 'https://dk.linkedin.com/company/go-work-aps'/>
+          <h4 style="margin-left: 3px">Følg os:</h4>
+          <FacebookIcon link="https://www.facebook.com/goworkodense/" />
+          <LinkedInIcon link="https://dk.linkedin.com/company/go-work-aps" />
         </div>
-    </div>
+      </div>
     </div>
     <div class="Content">
       <div id="hrskyen">
@@ -134,9 +135,6 @@
       src="https://hr-skyen.dk/hr/frame-api/customers/goworkaps.js"
       type="text/javascript"
     ></script>
-    <script
-      src="./forJobs.js"
-      type="text/javascript"
-    ></script>
+    <script src="./forJobs.js" type="text/javascript"></script>
   </body>
 </html>
