experimenting with cookiebot declaratio page

--- a/public/ledige-stillinger.html
+++ b/public/ledige-stillinger.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Cookie Policy</title>
+    <title>Ledige stillinger</title>
     <link rel="stylesheet" href="styles.css" />
     <link rel="stylesheet" href="sideDrawer.css" />
   </head>
@@ -75,7 +75,15 @@
         </div>
     </div>
     </div>
-    <script id="CookieDeclaration" src="https://consent.cookiebot.com/2f7dcd32-8bd8-433e-bb6f-03dadafb2ad9/cd.js" type="text/javascript" async></script>
+    <div class="Content">
+      <div id="hrskyen">
+        <noscript>
+          This page requires javascript
+          <br />
+          <a href="https://hr-skyen.dk/list-jobs/">Visit our job page</a>
+        </noscript>
+      </div>
+    </div>
     <div class="Footer">
       <div>
         <ul class="List">
@@ -118,5 +126,17 @@
         </ul>
       </div>
     </div>
+    <script
+      src="https://hr-skyen.dk/hr/frame-api/hr.js"
+      type="text/javascript"
+    ></script>
+    <script
+      src="https://hr-skyen.dk/hr/frame-api/customers/goworkaps.js"
+      type="text/javascript"
+    ></script>
+    <script
+      src="./forJobs.js"
+      type="text/javascript"
+    ></script>
   </body>
 </html>
