--- a/public/ledige-stillinger.html
+++ b/public/ledige-stillinger.html
@@ -1,142 +1,164 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Ledige stillinger</title>
-    <link rel="stylesheet" href="styles.css" />
-    <link rel="stylesheet" href="sideDrawer.css" />
-  </head>
-  <body>
-    <div class="Container">
-      <header class="Toolbar">
-        <div class="DrawerToggle">
-          <div></div>
-          <div></div>
-          <div></div>
-        </div>
-        <nav class="DesktopOnly">
-          <ul class="NavigationItems">
-            <a href="/vikar" class="Logo"
-              ><img src="/images/NYlogo250px.png" alt="Go:Work ApS"
-            /></a>
-            <li class="NavigationItem" id="listItem">
-              <a href="/vikar">Jobsøgende</a>
-            </li>
-            <li class="NavigationItem" id="listItem">
-              <a href="/virksomheder">Virksomheder</a>
-            </li>
-            <li class="NavigationItem" id="listItem">
-              <a href="/uddannelser">Uddannelsessteder</a>
-            </li>
-            <li class="NavigationItem" id="listItem">
-              <a href="/om-os">Om&nbsp;os</a>
-            </li>
-            <div class="KontaktNav">
-              <li class="NavigationItem" id="listItem">
-                <a href="/kontakt">Kontakt&nbsp;os</a>
-              </li>
-            </div>
-          </ul>
-        </nav>
-        <div class="Backdrop"></div>
-      </header>
-      <!-- REMOVE DISPLAY NONE BEFORE STYLING START -->
-      <div class="SideDrawer" style="text-align: center">
-        <nav>
-          <ul class="NavigationItems">
-            <a href="/vikar" class="MobileLogo"
-              ><img src="/images/NYlogo250px.png" alt="Go:Work ApS"
-            /></a>
-            <li class="NavigationItem" id="listItem">
-              <a href="/vikar">Jobsøgende</a>
-            </li>
-            <li class="NavigationItem" id="listItem">
-              <a href="/virksomheder">Virksomheder</a>
-            </li>
-            <li class="NavigationItem" id="listItem">
-              <a href="/uddannelser">Uddannelsessteder</a>
-            </li>
-            <li class="NavigationItem" id="listItem">
-              <a href="/om-os">Om&nbsp;os</a>
-            </li>
-            <div class="KontaktNav">
-              <li class="NavigationItem" id="listItem">
-                <a href="/kontakt">Kontakt&nbsp;os</a>
-              </li>
-            </div>
-          </ul>
-        </nav>
-        <div class="MobileFooter">
-            <h4 style="margin-left:3px">Følg os:</h4>
-            <FacebookIcon link ='https://www.facebook.com/goworkodense/' />
-            <LinkedInIcon link = 'https://dk.linkedin.com/company/go-work-aps'/>
-        </div>
-    </div>
-    </div>
-    <div class="Content">
-      <div id="hrskyen">
-        <noscript>
-          This page requires javascript
-          <br />
-          <a href="https://hr-skyen.dk/list-jobs/">Visit our job page</a>
-        </noscript>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Ledige stillinger</title>
+  <link rel="icon" href="/logoIcon.png" />
+  <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href="sideDrawer.css" />
+</head>
+
+<body>
+  <div class="Container">
+    <header class="Toolbar">
+      <div class="DrawerToggle">
+        <div></div>
+        <div></div>
+        <div></div>
       </div>
-    </div>
-    <div class="Footer">
-      <div>
-        <ul class="List">
-          <h3>GoWork</h3>
-          <li style="line-height: 1.5rem">
-            GoWork er et vikarbureau med 2 gazellepriser.<br />
-            Vi har siden 2012 formidlet ambitiøse mennesker <br />
-            i starten af deres karriere til midlertidige opgaver.
+      <nav class="DesktopOnly">
+        <ul class="NavigationItems">
+          <a href="/vikar" class="Logo"><img src="/images/logo.jpg" alt="Go:Work ApS" /></a>
+          <li class="NavigationItem" id="listItem">
+            <a href="/vikar">Jobsøgende</a>
           </li>
-          <li style="font-weight: bold">
-            Er din virksomhed klar til at <br />Go Work?
+          <li class="NavigationItem" id="listItem">
+            <a href="/virksomheder">Virksomheder</a>
           </li>
-        </ul>
-      </div>
-      <div>
-        <ul class="List">
-          <h3>GoWork ApS</h3>
-          <li style="line-height: 1.5rem">
-            Fjordsgade 11, 1. sal <br />
-            5000 Odense C. <br />
-            Tlf.: 6610 6500 <br />
+          <li class="NavigationItem" id="listItem">
+            <a href="/uddannelser">Uddannelsessteder</a>
           </li>
-          Følg os:
-          <div class="Icon">
-            <a
-              href="https://www.facebook.com/goworkodense/"
-              target="_blank"
-              rel="noreferrer"
-              ><img src="/images/facebook.svg" alt="facebook Icon"
-            /></a>
-          </div>
-          <div class="Icon">
-            <a
-              href="https://dk.linkedin.com/company/go-work-aps"
-              target="_blank"
-              rel="noreferrer"
-              ><img src="/images/linkedin.svg" alt="linkedIn Icon"
-            /></a>
+          <li class="NavigationItem" id="listItem">
+            <a href="/om-os">Om&nbsp;os</a>
+          </li>
+          <div class="KontaktNav">
+            <li class="NavigationItem" id="listItem">
+              <a href="/kontakt">Kontakt&nbsp;os</a>
+            </li>
           </div>
         </ul>
+      </nav>
+      <div class="Backdrop"></div>
+    </header>
+    <!-- REMOVE DISPLAY NONE BEFORE STYLING START -->
+    <div class="SideDrawer Close" style="text-align: center">
+      <nav>
+        <ul class="NavigationItems">
+          <a href="/vikar" class="MobileLogo"><img src="/images/logo.jpg" alt="Go:Work ApS" /></a>
+          <li class="NavigationItem" id="listItem">
+            <a href="/vikar">Jobsøgende</a>
+          </li>
+          <li class="NavigationItem" id="listItem">
+            <a href="/virksomheder">Virksomheder</a>
+          </li>
+          <li class="NavigationItem" id="listItem">
+            <a href="/uddannelser">Uddannelsessteder</a>
+          </li>
+          <li class="NavigationItem" id="listItem">
+            <a href="/om-os">Om&nbsp;os</a>
+          </li>
+          <div class="KontaktNav">
+            <li class="NavigationItem" id="listItem">
+              <a href="/kontakt">Kontakt&nbsp;os</a>
+            </li>
+          </div>
+        </ul>
+      </nav>
+      <div class="MobileFooter">
+        <div class="Icon">
+          <a href="https://www.facebook.com/GoWorkDanmark/" target="_blank" rel="noreferrer">
+            <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24">
+              3
+              <path fill="#255c92"
+                d="M19 0h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.762 0 5-2.239 5-5v-14c0-2.761-2.238-5-5-5zm-3 7h-1.924c-.615 0-1.076.252-1.076.889v1.111h3l-.238 3h-2.762v8h-3v-8h-2v-3h2v-1.923c0-2.022 1.064-3.077 3.461-3.077h2.539v3z">
+              </path>
+            </svg>
+          </a>
+        </div>
+        <div class="Icon">
+          <a href="https://dk.linkedin.com/company/go-work-aps" target="_blank" rel="noreferrer">
+            <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24">
+              <path fill="#255c92"
+                d="M19 0h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.762 0 5-2.239 5-5v-14c0-2.761-2.238-5-5-5zm-11 19h-3v-11h3v11zm-1.5-12.268c-.966 0-1.75-.79-1.75-1.764s.784-1.764 1.75-1.764 1.75.79 1.75 1.764-.783 1.764-1.75 1.764zm13.5 12.268h-3v-5.604c0-3.368-4-3.113-4 0v5.604h-3v-11h3v1.765c1.396-2.586 7-2.777 7 2.476v6.759z">
+              </path>
+            </svg>
+          </a>
+        </div>
+        <div class="Icon">
+          <a href="https://www.instagram.com/goworkaps" target="_blank" rel="noreferrer">
+            <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24">
+              <path fill="#255c92"
+                d="M15.233 5.488c-.843-.038-1.097-.046-3.233-.046s-2.389.008-3.232.046c-2.17.099-3.181 1.127-3.279 3.279-.039.844-.048 1.097-.048 3.233s.009 2.389.047 3.233c.099 2.148 1.106 3.18 3.279 3.279.843.038 1.097.047 3.233.047 2.137 0 2.39-.008 3.233-.046 2.17-.099 3.18-1.129 3.279-3.279.038-.844.046-1.097.046-3.233s-.008-2.389-.046-3.232c-.099-2.153-1.111-3.182-3.279-3.281zm-3.233 10.62c-2.269 0-4.108-1.839-4.108-4.108 0-2.269 1.84-4.108 4.108-4.108s4.108 1.839 4.108 4.108c0 2.269-1.839 4.108-4.108 4.108zm4.271-7.418c-.53 0-.96-.43-.96-.96s.43-.96.96-.96.96.43.96.96-.43.96-.96.96zm-1.604 3.31c0 1.473-1.194 2.667-2.667 2.667s-2.667-1.194-2.667-2.667c0-1.473 1.194-2.667 2.667-2.667s2.667 1.194 2.667 2.667zm4.333-12h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.762 0 5-2.239 5-5v-14c0-2.761-2.238-5-5-5zm.952 15.298c-.132 2.909-1.751 4.521-4.653 4.654-.854.039-1.126.048-3.299.048s-2.444-.009-3.298-.048c-2.908-.133-4.52-1.748-4.654-4.654-.039-.853-.048-1.125-.048-3.298 0-2.172.009-2.445.048-3.298.134-2.908 1.748-4.521 4.654-4.653.854-.04 1.125-.049 3.298-.049s2.445.009 3.299.048c2.908.133 4.523 1.751 4.653 4.653.039.854.048 1.127.048 3.299 0 2.173-.009 2.445-.048 3.298z">
+              </path>
+            </svg>
+          </a>
+        </div>
       </div>
     </div>
-    <script
-      src="https://hr-skyen.dk/hr/frame-api/hr.js"
-      type="text/javascript"
-    ></script>
-    <script
-      src="https://hr-skyen.dk/hr/frame-api/customers/goworkaps.js"
-      type="text/javascript"
-    ></script>
-    <script
-      src="./forJobs.js"
-      type="text/javascript"
-    ></script>
-  </body>
+  </div>
+  <div class="Content">
+    <div id="hrskyen">
+      <noscript>
+        This page requires javascript
+        <br />
+        <a href="https://hr-skyen.dk/list-jobs/">Visit our job page</a>
+      </noscript>
+    </div>
+  </div>
+  <footer class="Footer">
+    <div class="Aligned">
+      <ul class="List">
+        <h3>GoWork</h3>
+        <li style="line-height: 1.5rem;">GoWork er et vikar- og specialistbureau med flere gazellepriser. Vi har
+          siden 2012 formidlet ambitiøse mennesker i starten af deres karriere til midlertidige jobs.</li>
+        <li style="font-weight: bold;">Er din virksomhed klar til at Go Work?</li>
+      </ul>
+    </div>
+    <div>
+      <ul class="List">
+        <h3>GoWork ApS</h3>
+        <li style="line-height: 1.5rem;">
+          Fjordsgade 11, 1. sal <br />
+          5000 Odense C. <br />
+          Tlf.: 6610 6500 <br />
+        </li>
+        <div class="Icon">
+          <a href="https://www.facebook.com/GoWorkDanmark/" target="_blank" rel="noreferrer">
+            <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24">
+              3
+              <path fill="#255c92"
+                d="M19 0h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.762 0 5-2.239 5-5v-14c0-2.761-2.238-5-5-5zm-3 7h-1.924c-.615 0-1.076.252-1.076.889v1.111h3l-.238 3h-2.762v8h-3v-8h-2v-3h2v-1.923c0-2.022 1.064-3.077 3.461-3.077h2.539v3z">
+              </path>
+            </svg>
+          </a>
+        </div>
+        <div class="Icon">
+          <a href="https://dk.linkedin.com/company/go-work-aps" target="_blank" rel="noreferrer">
+            <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24">
+              <path fill="#255c92"
+                d="M19 0h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.762 0 5-2.239 5-5v-14c0-2.761-2.238-5-5-5zm-11 19h-3v-11h3v11zm-1.5-12.268c-.966 0-1.75-.79-1.75-1.764s.784-1.764 1.75-1.764 1.75.79 1.75 1.764-.783 1.764-1.75 1.764zm13.5 12.268h-3v-5.604c0-3.368-4-3.113-4 0v5.604h-3v-11h3v1.765c1.396-2.586 7-2.777 7 2.476v6.759z">
+              </path>
+            </svg>
+          </a>
+        </div>
+        <div class="Icon">
+          <a href="https://www.instagram.com/goworkaps" target="_blank" rel="noreferrer">
+            <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24">
+              <path fill="#255c92"
+                d="M15.233 5.488c-.843-.038-1.097-.046-3.233-.046s-2.389.008-3.232.046c-2.17.099-3.181 1.127-3.279 3.279-.039.844-.048 1.097-.048 3.233s.009 2.389.047 3.233c.099 2.148 1.106 3.18 3.279 3.279.843.038 1.097.047 3.233.047 2.137 0 2.39-.008 3.233-.046 2.17-.099 3.18-1.129 3.279-3.279.038-.844.046-1.097.046-3.233s-.008-2.389-.046-3.232c-.099-2.153-1.111-3.182-3.279-3.281zm-3.233 10.62c-2.269 0-4.108-1.839-4.108-4.108 0-2.269 1.84-4.108 4.108-4.108s4.108 1.839 4.108 4.108c0 2.269-1.839 4.108-4.108 4.108zm4.271-7.418c-.53 0-.96-.43-.96-.96s.43-.96.96-.96.96.43.96.96-.43.96-.96.96zm-1.604 3.31c0 1.473-1.194 2.667-2.667 2.667s-2.667-1.194-2.667-2.667c0-1.473 1.194-2.667 2.667-2.667s2.667 1.194 2.667 2.667zm4.333-12h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.762 0 5-2.239 5-5v-14c0-2.761-2.238-5-5-5zm.952 15.298c-.132 2.909-1.751 4.521-4.653 4.654-.854.039-1.126.048-3.299.048s-2.444-.009-3.298-.048c-2.908-.133-4.52-1.748-4.654-4.654-.039-.853-.048-1.125-.048-3.298 0-2.172.009-2.445.048-3.298.134-2.908 1.748-4.521 4.654-4.653.854-.04 1.125-.049 3.298-.049s2.445.009 3.299.048c2.908.133 4.523 1.751 4.653 4.653.039.854.048 1.127.048 3.299 0 2.173-.009 2.445-.048 3.298z">
+              </path>
+            </svg>
+          </a>
+        </div>
+      </ul>
+    </div>
+  </footer>
+  <script src="https://hr-skyen.dk/hr/frame-api/hr.js" type="text/javascript"></script>
+  <script src="https://hr-skyen.dk/hr/frame-api/customers/goworkaps.js" type="text/javascript"></script>
+  <script src="./forJobs.js" type="text/javascript"></script>
+</body>
+
 </html>
