fixed moblie nav on html pages

--- a/public/cookiePolicy.html
+++ b/public/cookiePolicy.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <div class="main">
+    <div class="Container">
         <header class="Toolbar">
             <div class="DrawerToggle">
                 <div></div>
