--- a/public/ledige-stillinger.html
+++ b/public/ledige-stillinger.html
@@ -158,6 +158,13 @@
   <script src="https://hr-skyen.dk/hr/frame-api/hr.js" type="text/javascript"></script>
   <script src="https://hr-skyen.dk/hr/frame-api/customers/goworkaps.js" type="text/javascript"></script>
   <script src="./forJobs.js" type="text/javascript"></script>
+  <script type="text/javascript">
+    setTimeout(() => {
+      const iframe = document.querySelector("iframe");
+      const content = iframe.querySelector("#content");
+      console.log(iframe);
+    }, 1500)
+  </script>
 </body>
 
 </html>
