added last changes

--- a/public/ledige-stillinger.html
+++ b/public/ledige-stillinger.html
@@ -5,10 +5,15 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Ledige stillinger</title>
+  <title>Find job | Ledige stillinger</title>
   <link rel="icon" href="/logoIcon.png" />
   <link rel="stylesheet" href="styles.css" />
   <link rel="stylesheet" href="sideDrawer.css" />
+  <meta name="description" content="Hos GoWork finder du altid masser af ledige stillinger i hele landet. Find vejen til dit næste job her" />
+  <meta property="og:title" content="Find job | Ledige stillinger" />
+  <meta property="og:description" content="Hos GoWork finder du altid masser af ledige stillinger i hele landet. Find vejen til dit næste job her" />
+  <meta name="twitter:title" content="Find job | Ledige stillinger" />
+  <meta name="twitter:description" content="Hos GoWork finder du altid masser af ledige stillinger i hele landet. Find vejen til dit næste job her" />
 </head>
 
 <body>
